// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar default values renders correctly 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  classes={
    Object {
      "paper": "makeStyles-drawerPaper-2",
    }
  }
  open={false}
  variant="persistent"
>
  <DrawerHeader />
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Sidebar isSidebarOpen = true, className, handleDrawerClose, children are defined renders correctly 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  className="className"
  classes={
    Object {
      "paper": "makeStyles-drawerPaper-2",
    }
  }
  open={true}
  variant="persistent"
>
  <DrawerHeader
    handleDrawerClose={[MockFunction]}
  />
  <div
    className="test-child"
  >
    some child
  </div>
</WithStyles(ForwardRef(Drawer))>
`;
